<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.kh.em.desl.ui.textinput.TextInputActivity"
    tools:showIn="@layout/activity_text_input"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_inp_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextAppearance="@style/countText"
        app:counterOverflowTextAppearance="@style/countOver">

        <EditText
            android:id="@+id/et_inp_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_hint_1"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_inp_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_inp_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_hint_2"
            android:inputType="phone"
            android:maxLength="10"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_inp_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/et_inp_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_hint_3"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_inp_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/et_inp_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_hint_4"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/text_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>


</LinearLayout>
